force-app/main/default/objects/Instrument__c/Instrument__c.object-meta.xml
<CustomObject>
    <description>Tracks medical equipment and devices used in service operations at ZetaMed Tech.</description>
    <label>Instrument</label>
    <nameField>
        <label>Instrument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Instruments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>