force-app/main/default/objects/Instrument__c/fields/Instrument_Type__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Type__c</fullName>
    <label>Instrument Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyzer</fullName>
            </value>
            <value>
                <fullName>Centrifuge</fullName>
            </value>
            <value>
                <fullName>PCR</fullName>
            </value>
            <value>
                <fullName>X-Ray</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>