force-app/main/default/objects/Instrument__c/validationRules/VR_Instrument_InstrumentName_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Instrument_InstrumentName_Req</fullName>
    <active>true</active>
    <description>Ensure Instrument Name is not blank.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Instrument Name is required</errorMessage>
</ValidationRule>