force-app/main/default/objects/Instrument__c/validationRules/VR_Instrument_InstrumentType_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Instrument_InstrumentType_Req</fullName>
    <active>true</active>
    <description>Instrument Type must be selected</description>
    <errorConditionFormula>ISBLANK( TEXT( Instrument_Type__c ) )</errorConditionFormula>
    <errorDisplayField>Instrument_Type__c</errorDisplayField>
    <errorMessage>Instrument Type is required</errorMessage>
</ValidationRule>