force-app/main/default/objects/Instrument__c/validationRules/VR_Instrument_ModelNumber_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Instrument_ModelNumber_Req</fullName>
    <active>true</active>
    <description>Ensure the Model Number is not blank</description>
    <errorConditionFormula>ISBLANK( Model_Number__c )</errorConditionFormula>
    <errorDisplayField>Model_Number__c</errorDisplayField>
    <errorMessage>Model Number is required</errorMessage>
</ValidationRule>