force-app/main/default/objects/Instrument__c/validationRules/VR_Instrument_SerialNumber_Unique_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Instrument_SerialNumber_Unique_Req</fullName>
    <active>true</active>
    <description>The Serial Number must be unique and not blank</description>
    <errorConditionFormula>ISBLANK( Serial_Number__c )</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>A serial number is required and must be unique.</errorMessage>
</ValidationRule>