force-app/main/default/objects/Instrument__c/validationRules/VR_Instrument_Status_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Instrument_Status_Req</fullName>
    <active>true</active>
    <description>Status must be selected</description>
    <errorConditionFormula>ISBLANK( TEXT(Status__c) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status is required</errorMessage>
</ValidationRule>